--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@muonw/powertable": "github:muonw/powertable",
+		"pretty-bytes": "^6.0.0"
+	}
 }
