--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"type": "module",
 	"dependencies": {
 		"@muonw/powertable": "github:muonw/powertable",
+		"csv-parse": "^5.3.3",
 		"papaparse": "^5.3.2",
 		"pretty-bytes": "^6.0.0"
 	}
