--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "1.25.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@playwright/test": "^1.29.1",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/kit": "^1.0.1",
 		"@types/papaparse": "^5.3.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -26,14 +26,14 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.6",
+		"svelte-preprocess": "^5.0.0",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^4.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@muonw/powertable": "github:muonw/powertable",
+		"@muonw/powertable": "file:powertable",
 		"csv-parse": "^5.3.3",
 		"papaparse": "^5.3.2",
 		"pretty-bytes": "^6.0.0"
