--- a/package.json
+++ b/package.json
@@ -14,28 +14,27 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.29.1",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.1",
-		"@types/papaparse": "^5.3.5",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/package": "^1.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^5.0.0",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^4.0.3"
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"sass": "^1.58.3",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.1",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0",
+		"vitest": "^0.29.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@muonw/powertable": "file:powertable",
-		"csv-parse": "^5.3.3",
-		"papaparse": "^5.3.2",
-		"pretty-bytes": "^6.0.0"
+		"arquero": "^5.1.0"
 	}
 }
