--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "powertable"]
-	path = powertable
-	url = git@github.com:RADar-AZDelta/powertable.git
+[submodule "RADar-DataTable"]
+	path = RADar-DataTable
+	url = https://github.com/RADar-AZDelta/RADar-DataTable.git
