--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --host=127.0.0.1",
     "build": "vite build",
     "preview": "vite preview",
     "test": "playwright test",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@playwright/test": "^1.29.1",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-node": "^1.2.1",
     "@sveltejs/kit": "^1.5.0",
     "@sveltejs/package": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -25,6 +26,7 @@
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "sass": "^1.58.3",
+    "sirv": "^2.0.2",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-preprocess": "^5.0.1",
@@ -36,6 +38,11 @@
   "type": "module",
   "dependencies": {
     "arquero": "^5.1.0",
-    "DataTable": "file:RADar-DataTable"
-  }
+    "cors": "^2.8.5",
+    "DataTable": "file:RADar-DataTable",
+    "express": "^4.18.2"
+  },
+  "files": [
+    "custom-adapter.js"
+  ]
 }
