--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "arquero": "^5.1.0",
     "cors": "^2.8.5",
-    "DataTable": "file:RADar-DataTable",
+    "DataTable": "file:libs/RADar-DataTable",
     "express": "^4.18.2"
   },
   "files": [
