--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "RADar-DataTable"]
 	path = libs/RADar-DataTable
-	url = ssh//git@github.com:RADar-AZDelta/RADar-DataTable.git
+	url = git@github.com:RADar-AZDelta/RADar-DataTable.git
 	branch = master
