--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
-    "sass": "^1.58.3",
+    "sass": "^1.53.0",
     "sirv": "^2.0.2",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
-    "svelte-preprocess": "^5.0.1",
+    "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
-    "vitest": "^0.29.2"
+    "vitest": "^0.29.2",
+    "bulma": "^0.9.4"
   },
   "type": "module",
   "dependencies": {
