--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/package": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "bulma": "^0.9.4",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -34,8 +35,7 @@
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
-    "vitest": "^0.29.2",
-    "bulma": "^0.9.4"
+    "vitest": "^0.29.2"
   },
   "type": "module",
   "dependencies": {
