--- a/package.json
+++ b/package.json
@@ -14,34 +14,34 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.29.1",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-node": "^1.2.1",
-    "@sveltejs/kit": "^1.5.0",
-    "@sveltejs/package": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
+    "@playwright/test": "^1.33.0",
+    "@sveltejs/adapter-auto": "^2.0.1",
+    "@sveltejs/adapter-node": "^1.2.4",
+    "@sveltejs/kit": "^1.15.9",
+    "@sveltejs/package": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "bulma": "^0.9.4",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "sass": "^1.53.0",
-    "sirv": "^2.0.2",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.0",
+    "sass": "^1.62.1",
+    "sirv": "^2.0.3",
+    "svelte": "^3.58.0",
+    "svelte-check": "^3.2.0",
     "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vitest": "^0.29.2"
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.3.3",
+    "vitest": "^0.29.8"
   },
   "type": "module",
   "dependencies": {
-    "arquero": "^5.1.0",
+    "arquero": "^5.2.0",
     "lodash.debounce": "^4.0.8",
-    "radar-datatable": "file:lib\\RADar-DataTable"
+    "svelte-radar-datatable": "^0.0.11"
   },
   "files": [
     "custom-adapter.js"
