--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@browsermt/bergamot-translator": "^0.4.9",
     "@playwright/test": "^1.33.0",
     "@sveltejs/adapter-auto": "^2.0.1",
     "@sveltejs/adapter-node": "^1.2.4",
@@ -40,8 +41,10 @@
   "type": "module",
   "dependencies": {
     "arquero": "^5.2.0",
+    "languagedetect": "^2.0.0",
     "lodash.debounce": "^4.0.8",
-    "svelte-radar-datatable": "^0.0.24"
+    "svelte-radar-datatable": "^0.0.24",
+    "vite-plugin-static-copy": "^0.14.0"
   },
   "files": [
     "custom-adapter.js"
