--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -1,9 +1,10 @@
 name: Remove old artifacts
 
 on:
-  schedule:
-    # Every day at 1am
-    - cron: '0 1 * * *'
+  push:
+    branches: 'master'
+  #schedule:
+  #  - cron: '0 1 * * *'
 
 jobs:
   remove-old-artifacts:
