--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@browsermt/bergamot-translator": "^0.4.9",
     "@playwright/test": "^1.33.0",
     "@sveltejs/adapter-auto": "^2.0.1",
-    "@sveltejs/adapter-node": "^1.2.4",
+    "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.16.3",
     "@sveltejs/package": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -39,6 +39,7 @@
   },
   "type": "module",
   "dependencies": {
-    "svelte-radar-datatable": "^0.0.24"
+    "arquero": "^5.2.0",
+    "svelte-radar-datatable": "^0.0.25"
   }
 }
