--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "vite dev --host=127.0.0.1",
+    "unlighthouse": "pnpm dlx unlighthouse --site https://radar-azdelta.github.io/Keun/",
     "build": "vite build",
     "preview": "vite preview --host=127.0.0.1",
     "test": "playwright test",
