--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.62.1",
     "svelte": "^3.59.1",
     "svelte-check": "^3.3.2",
+    "svelte-markdown": "^0.2.3",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
