--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "type": "module",
   "dependencies": {
     "@radar-azdelta/svelte-datatable": "^0.0.30",
-    "arquero": "^5.2.0"
+    "arquero": "^5.2.0",
+    "lodash.debounce": "^4.0.8"
   }
 }
