--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
-VITE_ATHENA="https://athena.ohdsi.org/search-terms/terms?"
+VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
