--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@radar-azdelta/svelte-datatable": "^0.0.37",
     "arquero": "^5.2.0",
+    "firebase": "^9.23.0",
     "lodash.debounce": "^4.0.8"
   }
 }
