--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "arquero": "^5.2.0",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0"
   }
 }
