Download & upload a file for local impl

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
 VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
+PUBLIC_CLOUD_IMPLEMENTATION='none'
