push Firebase public vars

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 VITE_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
 VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
 PUBLIC_CLOUD_IMPLEMENTATION='none'
+PUBLIC_FIREBASE_API_KEY=AIzaSyA0v0mn-nxksdx1JOBkqNKO9h1CrAhEsIY
+PUBLIC_FIREBASE_AUTH_DOMAIN=fysio-app-764075.firebaseapp.com
+PUBLIC_FIREBASE_DATABASE_URL=https://fysio-app-764075-default-rtdb.europe-west1.firebasedatabase.app
+PUBLIC_FIREBASE_PROJECT_ID=fysio-app-764075
+PUBLIC_FIREBASE_STORAGE_BUCKET=fysio-app-764075.appspot.com
+PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1428391809
+PUBLIC_FIREBASE_APP_ID=1:1428391809:web:8dc3ff0635f71f9423ca80
