--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite dev --host=127.0.0.1",
     "unlighthouse": "pnpm dlx unlighthouse --site https://radar-azdelta.github.io/Keun/",
     "build": "vite build",
-    "preview": "vite preview --host=127.0.0.1",
+    "preview": "vite build && vite preview --host=127.0.0.1",
     "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
