--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.16.3",
     "@sveltejs/package": "^1.0.2",
+    "@types/better-sqlite3": "^7.6.5",
     "@types/lodash.debounce": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
@@ -44,6 +45,7 @@
   "dependencies": {
     "@radar-azdelta/svelte-datatable": "^0.0.48",
     "arquero": "^5.2.0",
+    "better-sqlite3": "^8.6.0",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
     "lodash.debounce": "^4.0.8",
