refactor classes structure

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 VITE_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
 VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
-PUBLIC_CLOUD_IMPLEMENTATION='sqlite'
+
+PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='none'
+PUBLIC_CLOUD_AUTH_IMPLEMENTATION='none'
+
 PUBLIC_FIREBASE_AUTH_DOMAIN=fysio-app-764075.firebaseapp.com
 PUBLIC_FIREBASE_DATABASE_URL=https://fysio-app-764075-default-rtdb.europe-west1.firebasedatabase.app
 PUBLIC_FIREBASE_PROJECT_ID=fysio-app-764075
