--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "vite dev --host=127.0.0.1",
+    "dev": "vite dev --host=127.0.0.1 --port=5179",
     "unlighthouse": "pnpm dlx unlighthouse --site https://radar-azdelta.github.io/Keun/",
     "build": "vite build",
     "preview": "vite build && vite preview --host=127.0.0.1",
