--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@radar-azdelta/svelte-athena-search": "^0.0.16",
     "@radar-azdelta/svelte-datatable": "^0.0.48",
     "arquero": "^5.2.0",
     "better-sqlite3": "^8.6.0",
