--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
 
 PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='none'
 PUBLIC_CLOUD_AUTH_IMPLEMENTATION='none'
+PUBLIC_CLOUD_SAVE_IMPLEMENTATION='none'
 
 PUBLIC_FIREBASE_AUTH_DOMAIN=fysio-app-764075.firebaseapp.com
 PUBLIC_FIREBASE_DATABASE_URL=https://fysio-app-764075-default-rtdb.europe-west1.firebasedatabase.app
