--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,16 @@
 steps:
 - name: 'node:lts'
   entrypoint: npm
+  args: ['install', '-g', 'pnpm']
+  id: 'Install pnpm globally
+
+- name: 'node:lts'
+  entrypoint: pnpm
   args: ['install']
   id: 'Install all dependencies'
 
 - name: 'node:lts'
-  entrypoint: npm
+  entrypoint: pnpm
   args: ["run", "build"]
   id: 'Build the application'
 
