--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
 - name: 'node:lts'
   entrypoint: npm
-  args: ['install', '-g', 'pnpm']
-  id: 'Install pnpm globally'
+  args: ['install', 'pnpm']
+  id: 'Install pnpm'
 
 - name: 'node:lts'
   entrypoint: pnpm
