change Firebase project

--- a/.env
+++ b/.env
@@ -5,9 +5,10 @@ PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='none'
 PUBLIC_CLOUD_AUTH_IMPLEMENTATION='none'
 PUBLIC_CLOUD_SAVE_IMPLEMENTATION='none'
 
-PUBLIC_FIREBASE_AUTH_DOMAIN=fysio-app-764075.firebaseapp.com
-PUBLIC_FIREBASE_DATABASE_URL=https://fysio-app-764075-default-rtdb.europe-west1.firebasedatabase.app
-PUBLIC_FIREBASE_PROJECT_ID=fysio-app-764075
-PUBLIC_FIREBASE_STORAGE_BUCKET=fysio-app-764075.appspot.com
-PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1428391809
-PUBLIC_FIREBASE_APP_ID=1:1428391809:web:8dc3ff0635f71f9423ca80
+PUBLIC_FIREBASE_API_KEY="AIzaSyCpf3xwzPxBg5ZwiaRNjPDeqRk51MxpzJU"
+PUBLIC_FIREBASE_AUTH_DOMAIN="azd-dev-keun1.firebaseapp.com"
+PUBLIC_FIREBASE_PROJECT_ID="azd-dev-keun1"
+PUBLIC_FIREBASE_STORAGE_BUCKET="azd-dev-keun1.appspot.com"
+PUBLIC_FIREBASE_MESSAGING_SENDER_ID="608698516051"
+PUBLIC_FIREBASE_APP_ID="1:608698516051:web:fffaaff56e7dc05eb87ca6"
+PUBLIC_TENANT_ID=""
