delete submodules & put those files in obsolete folder & add eslint config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
 	"awooga.originalColorCustomizations": {},
 	"workbench.colorCustomizations": {},
 	"editor.formatOnSave": true,
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "explicit"
+	},
 	"[svelte]": { "editor.defaultFormatter": "svelte.svelte-vscode" }
 }
