--- a/bearer.yml
+++ b/bearer.yml
@@ -1,28 +1,28 @@
 disable-version-check: false
 log-level: info
 report:
-    fail-on-severity: critical,high,medium,low
-    format: ""
-    no-color: false
-    output: ""
-    report: security
-    severity: critical,high,medium,low,warning
+  fail-on-severity: critical,high,medium,low
+  format: ''
+  no-color: false
+  output: ''
+  report: security
+  severity: critical,high,medium,low,warning
 rule:
-    disable-default-rules: false
-    only-rule: []
-    skip-rule: []
+  disable-default-rules: false
+  only-rule: []
+  skip-rule: []
 scan:
-    context: ""
-    data_subject_mapping: ""
-    disable-domain-resolution: true
-    domain-resolution-timeout: 3s
-    exit-code: -1
-    external-rule-dir: []
-    force: false
-    hide_progress_bar: false
-    internal-domains: []
-    parallel: 0
-    quiet: false
-    scanner:
-        - sast
-    skip-path: []
+  context: ''
+  data_subject_mapping: ''
+  disable-domain-resolution: true
+  domain-resolution-timeout: 3s
+  exit-code: -1
+  external-rule-dir: []
+  force: false
+  hide_progress_bar: false
+  internal-domains: []
+  parallel: 0
+  quiet: false
+  scanner:
+    - sast
+  skip-path: []
