--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "lint": "pnpm format && prettier . --check . && eslint . --fix",
+    "format": "prettier . --write ."
   },
   "devDependencies": {
     "@browsermt/bergamot-translator": "^0.4.9",
@@ -24,7 +24,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "eslint": "^8.53.0",
+    "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "prettier": "^3.1.0",
