config eslint & prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "singleQuote": true,
   "arrowParens": "avoid",
   "printWidth": 120,
-  "plugins": ["prettier-plugin-svelte", "prettier-plugin-organize-imports"],
+  "plugins": ["prettier-plugin-svelte"],
   "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
