--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
-  "awooga.originalColorCustomizations": {},
   "workbench.colorCustomizations": {},
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+    "source.fixAll": "always"
   },
   "[svelte]": { "editor.defaultFormatter": "svelte.svelte-vscode" }
 }
