--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-svelte": "^3.1.0",
     "sass": "^1.69.5",
     "svelte": "^4.2.3",
