remove obsolete code

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ VITE_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
 VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
 
 PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='none'
-PUBLIC_CLOUD_AUTH_IMPLEMENTATION='none'
+PUBLIC_CLOUD_AUTH_IMPLEMENTATION='firebase'
 PUBLIC_CLOUD_SAVE_IMPLEMENTATION='none'
 
-PUBLIC_FIREBASE_API_KEY="AIzaSyCpf3xwzPxBg5ZwiaRNjPDeqRk51MxpzJU"
+PUBLIC_FIREBASE_API_KEY="AIzaSyBL8AZmaIKLSXVSui7qrY6tHZTD24PcT7Y"
 PUBLIC_FIREBASE_AUTH_DOMAIN="azd-dev-keun1.firebaseapp.com"
 PUBLIC_FIREBASE_PROJECT_ID="azd-dev-keun1"
 PUBLIC_FIREBASE_STORAGE_BUCKET="azd-dev-keun1.appspot.com"
