--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
 engine-strict=true
+@radar-azdelta:registry=https://europe-west1-npm.pkg.dev/azd-dev-artifacts/azd-d-artifacts-art-euwe1-npmrepo/
+//europe-west1-npm.pkg.dev/azd-dev-artifacts/azd-d-artifacts-art-euwe1-npmrepo/:always-auth=true
