--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VITE_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
 VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
 
 PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='none'
-PUBLIC_CLOUD_AUTH_IMPLEMENTATION='firebase'
+PUBLIC_CLOUD_AUTH_IMPLEMENTATION='none'
 PUBLIC_CLOUD_SAVE_IMPLEMENTATION='none'
 
 PUBLIC_FIREBASE_API_KEY="AIzaSyBL8AZmaIKLSXVSui7qrY6tHZTD24PcT7Y"
