--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: Deploy to GitHub Pages
 
+env:
+  PUBLIC_CLOUD_DATABASE_IMPLEMENTATION: 'none'
+  PUBLIC_CLOUD_AUTH_IMPLEMENTATION: 'none'
+  PUBLIC_CLOUD_SAVE_IMPLEMENTATION: 'none'
+
 on:
   push:
     branches: 'site'
