refactoring the automapping process

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
-VITE_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
+PUBLIC_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
+PUBLIC_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
 
 PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='firebase'
 PUBLIC_CLOUD_AUTH_IMPLEMENTATION='firebase'
