fix issue when multiple mapping automapped row & show className in table

--- a/src/lib/config.json
+++ b/src/lib/config.json
@@ -135,6 +135,11 @@
       "editable": false
     },
     {
+      "id": "className",
+      "visible": true,
+      "editable": false
+    },
+    {
       "id": "matchScore",
       "visible": false,
       "editable": false
