fix the download of all flagged concepts

--- a/src/lib/config.json
+++ b/src/lib/config.json
@@ -223,6 +223,7 @@
     }
   ],
   "customBlobInitial": "concept_id,concept_name,domain_id,vocabulary_id,concept_class_id,standard_concept,concept_code,valid_start_date,valid_end_date,invalid_reason\n,,,,,,,,,",
+  "flaggedBlobInitial": "sourceCode,sourceName,sourceFrequency,conceptId,sourceAutoAssignedConceptIds,conceptName,mappingStatus,domainId,vocabularyId,className,matchScore,equivalence,statusSetBy,statusSetOn,mappingType,comment,createdBy,createdOn,assignedReviewer,ADD_INFO:approvedBy,ADD_INFO:approvedOn,ADD_INFO:numberOfConcepts,ADD_INFO:customConcept,ADD_INFO:lastAthenaFilter\n,,,,,,,,,,,,,,,,,,,,,,,",
   "customConceptInfo": {
     "domain_id": [
       "Condition",
