--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PUBLIC_MAPPINGDATA_PATH="https://athena.ohdsi.org/api/v1/concepts?"
 PUBLIC_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
 
-PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='firebase'
-PUBLIC_CLOUD_AUTH_IMPLEMENTATION='firebase'
+PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='none'
+PUBLIC_CLOUD_AUTH_IMPLEMENTATION='none'
 
 PUBLIC_FIREBASE_API_KEY="AIzaSyBL8AZmaIKLSXVSui7qrY6tHZTD24PcT7Y"
 PUBLIC_FIREBASE_AUTH_DOMAIN="azd-dev-keun1.firebaseapp.com"
