--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,9 @@
     "cleanUrls": true,
     "trailingSlash": false,
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "frameworksBackend": {
+      "region": "europe-west1"
+    },
     "rewrites": [
       {
         "source": "**",
