--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "pnpm format && prettier . --check . && eslint . --fix",
     "format": "prettier . --write .",
-    "artifactregistry-login": "npx google-artifactregistry-auth"
+    "artifactregistry-login": "npx google-artifactregistry-auth",
+    "hosting": "firebase hosting:channel:deploy keun",
+    "new-hosting": "pnpm build && firebase hosting:channel:deploy keun"
   },
   "devDependencies": {
     "@browsermt/bergamot-translator": "^0.4.9",
     "@playwright/test": "^1.39.0",
-    "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/package": "^2.2.2",
