Push build to site branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,32 +20,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup authentication
-        uses: google-github-actions/auth@v1
-        with:
-          service_account: ${{ secrets.GCP_SA_MAIL }}
-
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: pnpm
+      # - name: Install Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
+      #     cache: pnpm
 
-      - name: Authenticate
-        run: npx google-artifactregistry-auth
+      # - name: Authenticate
+      #   run: npx google-artifactregistry-auth
 
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+      # - name: Install dependencies
+      #   run: pnpm install --no-frozen-lockfile
 
-      - name: build
-        run: |
-          pnpm run build
-          touch public/.nojekyll
+      # - name: build
+      #   run: |
+      #     pnpm run build
+      #     touch public/.nojekyll
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v2
