--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,6 +15,12 @@ steps:
     args: ['-c', 'git config --global --add safe.directory /workspace']
     id: 'Configure Git'
 
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args: ['./update-env.sh']
+    env:
+      - 'PROVIDER=firebase'
+
   - name: 'node:lts'
     waitFor: ['Configure Git']
     entrypoint: npx
@@ -63,31 +69,31 @@ steps:
   #       /tmp/firebase deploy --project ${PROJECT_ID} --non-interactive -m "Build ${BUILD_ID}" --debug
   #   id: 'Deploy to Firebase'
 
-  - name: 'gcr.io/cloud-builders/git'
-    entrypoint: 'bash'
-    secretEnv:
-      - TF_VAR_github_personal_access_token
-    args:
-      - '-c'
-      - |
-        git config --global user.email "toby.bostoen@azdelta.be"
-        git config --global user.name "BostoenToby"
+  # - name: 'gcr.io/cloud-builders/git'
+  #   entrypoint: 'bash'
+  #   secretEnv:
+  #     - TF_VAR_github_personal_access_token
+  #   args:
+  #     - '-c'
+  #     - |
+  #       git config --global user.email "toby.bostoen@azdelta.be"
+  #       git config --global user.name "BostoenToby"
 
-        git config --global credential.helper 'store --file=.git/credentials'
-        echo "https://$$TF_VAR_github_personal_access_token:x-oauth-basic@github.com" > .git/credentials
-        cat .git/credentials
+  #       git config --global credential.helper 'store --file=.git/credentials'
+  #       echo "https://$$TF_VAR_github_personal_access_token:x-oauth-basic@github.com" > .git/credentials
+  #       cat .git/credentials
 
-        mkdir /public
-        cp public/* /public
-        git checkout --orphan gh-pages
-        rm -rf .
-        touch README.md
-        git add README.md
-        cp /public ./public
-        git add .
-        git status
-        git commit -m "Deploying build to gh-pages"
-        git push origin gh-pages Username: BostoenToby Password: $$TF_VAR_github_personal_access_token
-    # waitFor: ['Scan', 'Build']
-    waitFor: ['Build']
-    id: 'Push builded site to site branch'
+  #       mkdir /public
+  #       cp public/* /public
+  #       git checkout --orphan gh-pages
+  #       rm -rf .
+  #       touch README.md
+  #       git add README.md
+  #       cp /public ./public
+  #       git add .
+  #       git status
+  #       git commit -m "Deploying build to gh-pages"
+  #       git push origin gh-pages Username: BostoenToby Password: $$TF_VAR_github_personal_access_token
+  #   # waitFor: ['Scan', 'Build']
+  #   waitFor: ['Build']
+  #   id: 'Push builded site to site branch'
